SERVER-67650 persist additional recipient resharding metrics